fix: Correct 'Welder position' label to 'Welding position' all certificate views

--- a/views/EditCertificate.ejs
+++ b/views/EditCertificate.ejs
@@ -236,7 +236,7 @@
               value="<%=record.depositeThicknessRange %>" type="text" name="depositeThicknessRange" id=""></td>
         </tr>
         <tr>
-          <td style="text-align: left; border: 1px solid black; padding: 4px; font-size: 12px; font-weight: bold;">Welder
+          <td style="text-align: left; border: 1px solid black; padding: 4px; font-size: 12px; font-weight: bold;">Welding
             position</td>
           <td style="text-align: left; border: 1px solid black; padding: 4px; font-size: 12px;"><input
               value="<%=record.welderPositionActual %>" type="text" name="welderPositionActual" id=""></td>
