--- a/views/insertCertificate.ejs
+++ b/views/insertCertificate.ejs
@@ -207,7 +207,7 @@
               name="depositeThicknessRange" id=""></td>
         </tr>
         <tr>
-          <td style="text-align: left; border: 1px solid black; font-weight: bold;">Welder position</td>
+          <td style="text-align: left; border: 1px solid black; font-weight: bold;">Welding position</td>
           <td style="text-align: left; border: 1px solid black;"><input type="text" name="welderPositionActual" id="">
           </td>
           <td style="text-align: left; border: 1px solid black;" colspan="2"><input type="text"
