--- a/views/viewCertificate.ejs
+++ b/views/viewCertificate.ejs
@@ -272,7 +272,7 @@
         </td>
       </tr>
       <tr>
-        <td style="text-align: left; border: 1px solid black; padding: 4px; font-size: 12px; font-weight: bold;">Welder
+        <td style="text-align: left; border: 1px solid black; padding: 4px; font-size: 12px; font-weight: bold;">Welding
           position</td>
         <td style="text-align: left; border: 1px solid black; padding: 4px; font-size: 12px;">
           <%=record.welderPositionActual %>
