--- a/views/EditCertificate.ejs
+++ b/views/EditCertificate.ejs
@@ -39,7 +39,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: transform 0.2s;
+    opacity: 0;
+    transition: transform 0.2s, opacity 0.2s;
+  }
+  tr:hover .control-btn {
+    opacity: 1;
   }
   .control-btn:hover {
     transform: scale(1.1);
@@ -102,8 +106,8 @@
 
           </div>
         </th>
-        <th><img id="preview-selected-image" style="width:30vh"
-            src="/certificates/<%=record.certificateNo %>/profile.jpg" alt=""></th>
+        <th><img id="preview-selected-image" style="width:150px"
+            src="<%= record.profilePic %>" alt=""></th>
 
       </thead>
 
@@ -650,7 +654,7 @@
                 <div
                   style="display: flex; justify-content: end; align-items: center; background-color: rgb(223, 223, 223); width: 100%; font-weight: bold;">
                   <p>To verify the information about the certificate. Please scan the QR code using any QR scan app</p>
-                  <img width="90px" src="/certificates/<%=record.certificateNo %>/qrcode.png" alt="">
+                  <img width="90px" src="<%= record.qrLink %>" alt="">
 
                 </div>
 
